# bookstore

./: Dockerfile  db.sqlite3  manage.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml  workflow-pr.yml
bookstore/: settings.py  urls.py  views.py
order/: factories.py
order/migrations/: 0001_initial.py
order/models/: order.py
order/serializers/__pycache__/: order_serializer.py
order/tests/test_viewsets/: test_order_viewset.py
product/: factories.py
product/migrations/: 0001_initial.py
product/models/: category.py  product.py
product/serializers/: product_serializer.py
product/tests/test_serializers/: test_category_serializer.py  test_product_serializer.py
product/viewsets/: product_viewset.py
